--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,6 @@
         }
     ],
     "homepage": "https://github.com/mk990/mkapi",
-    "version": "0.0.3",
     "minimum-stability": "dev",
     "prefer-stable": true,
     "config": {
@@ -32,7 +31,7 @@
     },
     "require": {
         "php": ">=8.2",
-        "illuminate/support": ">=11.0"
+        "illuminate/support": "^11.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5"
