--- a/composer.json
+++ b/composer.json
@@ -31,10 +31,10 @@
     },
     "require": {
         "php": ">=8.3",
-        "illuminate/support": "^12.0"
+        "illuminate/support": "^10|^11|^12.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.5"
+        "phpunit/phpunit": "^9.5|^10|^11"
     },
     "scripts": {
         "test": "vendor/bin/phpunit",
